autopartkit (0.82) UNRELEASED; urgency=low

  * Petter Reinholdtsen
    - Adapt to the new fstab creating regime.  Depend on
      partconf-mkfstab and call mkfstab at the end of the
      postinst script to make sure the fstab file is created
      when base-installer need it. Provide created-fstab as
      we now create the file ourselves.

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 13 Mar 2004 17:06:13 +0100

autopartkit (0.81) unstable; urgency=low

  * Translations
    - Dafydd Harries : Added Welsh translation (cy.po)

 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 13:43:07 +0100

autopartkit (0.80) unstable; urgency=low

  * Document in HACKING that one should use automake -c -a
  * Did that. Closes: #232610
  * Add depcomp and missing to the link hack, just in case.
  * Translations
    - Dafydd Harries : Added Welsh translation (cy.po)
    
 -- Joey Hess <joeyh@debian.org>  Tue,  9 Mar 2004 01:43:07 -0500

autopartkit (0.79) unstable; urgency=low

  * Translations
    - Håvard Korsvoll: Updated Norwegian, nynorsk translation (nn.po).
    - Kęstutis Biliūnas: Updated Lithuanian translation (lt.po).
    - Ming Hua: Initial and updated Traditional Chinese translation
                (zh_TW.po), by Tetralet.
    - Håvard Korsvoll
      - Updated Norwegian, bokmål translation, (nb.po). From Axel Bojer

 -- Joey Hess <joeyh@debian.org>  Tue,  2 Mar 2004 13:13:22 -0500

autopartkit (0.78) unstable; urgency=low

  * Make sure both install-sh and mkinstalldirs are real files and not
    symlinks, to avoid build problems when uploaders with broken CVS
    copies upload the package. (#232610)

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 15 Feb 2004 18:09:39 +0100

autopartkit (0.77) unstable; urgency=low

  * Translations:
    - Jordi Mallach
      - Update Catalan translation.
    - Giuseppe Sacco
      - applied patch for normalizing menus and some italian translation (it.po)
    - h3li0s
      - Added Albanian translation (sq.po)