@@ -98,15 +98,6 @@
 /* Ignore devfs devices, used in choose_dev */
 #define IGNORE_DEVFS_DEVICES 1
 
-/* Create fstab or not? - not */
-/* #define CREATE_FSTAB 1 */
-
-#if defined(TEST)
-#define FSTAB   "fstab"
-#else /* not TEST */
-#define FSTAB   "/target/etc/fstab"
-#endif /* not TEST */
-
 #if 0
 #define log_line() \
   autopartkit_log("  Error bounding: %s %d\n",__FILE__,__LINE__)
@@ -743,9 +734,6 @@ static void
 fix_mounting(device_mntpoint_map_t mountmap[], int partcount)
 {
     int i;
-#if defined(CREATE_FSTAB)
-    FILE *fstab;
-#endif /* CREATE_FSTAB */
 
     /* Mount partitions and write fstab */
     if (0 != mkdir("/target", 0755))
@@ -779,17 +767,6 @@ fix_mounting(device_mntpoint_map_t mountmap[], int partcount)
     }
     log_line();
 
-#if defined(CREATE_FSTAB)
-    /*
-     * /etc/ is needed to be able to open fstab for writing.  What if
-     * /target/etc/ is a partition?  [/etc/ should always be on the
-     * root partition.
-     */
-    if (0 != mkdir("/target/etc", 0755))
-        autopartkit_error(1, "Unable to mkdir /target/etc: %s",
-			  strerror(errno));
-#endif /* CREATE_FSTAB */
-
     /* Are these really needed?  Who will create them if they are missing? */
     if (0 != mkdir("/target/floppy", 0755))
         autopartkit_error(1, "Unable to mkdir /target/floppy: %s",
@@ -797,30 +774,10 @@ fix_mounting(device_mntpoint_map_t mountmap[], int partcount)
     if (0 != mkdir("/target/cdrom", 0755))
         autopartkit_error(1, "Unable to mkdir /target/cdrom: %s",
 			  strerror(errno));
-#if defined(CREATE_FSTAB)
-    fstab = fopen(FSTAB, "w");
-
-    if ( ! fstab) {
-        autopartkit_error(0,"Unable to open /target/etc/fstab for writing!\n");
-	return; /* FIXME: what now?  crash and burn!*/
-    }
-
-    log_line();
-    fprintf(fstab, "# /etc/fstab: static file system information.\n#\n");
-    fprintf(fstab, "# <file system> <mount point> <type> <options>"
-		   "\t<dump>\t<pass>\n");
-    fprintf(fstab, "%s\t/\t%s\tdefaults,errors=remount-ro\t\t0\t1\n", 
-	    normalize_devfs(find_partition_by_mountpoint(mountmap,"/")),
-	    DEFAULT_FS);
-#endif /* CREATE_FSTAB */
-
     for (i = 0; i < partcount; i++)
     {
         char *tmpmnt;
 	char *devpath;
-#if defined(CREATE_FSTAB)
-	int fsckpass;
-#endif /* CREATE_FSTAB */
 	if ( is_root(mountmap[i].mountpoint->mountpoint)
 #if defined(LVM_HACK)
 	     || (strcmp(mountmap[i].mountpoint->fstype,"lvm") == 0)
@@ -837,17 +794,6 @@ fix_mounting(device_mntpoint_map_t mountmap[], int partcount)
 
 	devpath = normalize_devfs(mountmap[i].devpath);
 
-#if defined(CREATE_FSTAB)
-	/* No use running fsck on filesystems without a device */
-	if (devpath && 0 == strcmp("none", devpath))
-	    fsckpass = 0;
-	else
-	    fsckpass = 2;
-
-	fprintf(fstab, "%s\t%s\t%s\tdefaults\t\t0\t%d\n", 
-		devpath, mountmap[i].mountpoint->mountpoint,
-		mountmap[i].mountpoint->fstype,	fsckpass);
-#endif /* CREATE_FSTAB */
 	asprintf(&tmpmnt, "/target%s", mountmap[i].mountpoint->mountpoint);
 	make_path(tmpmnt, 0755);
 	if (mount(mountmap[i].devpath, tmpmnt, mountmap[i].mountpoint->fstype,
@@ -864,15 +810,6 @@ fix_mounting(device_mntpoint_map_t mountmap[], int partcount)
        mounted device after it is mounted. */
     chmod("/target/tmp", 01777);
    
-#if defined(CREATE_FSTAB)
-    fprintf(fstab, "%s\tnone\tswap\tsw\t\t0\t0\n",
-	    normalize_devfs(find_partition_by_mountpoint(mountmap,"swap")));
-    fprintf(fstab, "/dev/fd0\t/floppy\tauto\trw,user,noauto\t\t0\t0\n");
-    fprintf(fstab, "/dev/cdrom\t/cdrom\tiso9660\tro,user,noauto\t\t0\t0\n");
-    fprintf(fstab, "proc\t/proc\tproc\tdefaults\t\t0\t0\n");
-    
-    fclose(fstab);
-#endif /* CREATE_FSTAB */
 }
 
 /*
@@ -1126,7 +1063,7 @@ make_partitions(const diskspace_req_t *space_reqs, PedDevice *devlist)
                 debconf_progress_start(client, 0, 1000, "autopartkit/createfs-progress");
 
 		timer = ped_timer_new(autopartkit_handle_timer, NULL);
-                fs = ped_file_system_create(&newpart->geom,fs_type, timer);
+                fs = ped_file_system_create(&newpart->geom, fs_type, timer);
                 ped_timer_destroy(timer);
 
                 debconf_progress_stop(client);            
