@@ -6,6 +6,8 @@ autopartkit (0.82) UNRELEASED; urgency=low
       postinst script to make sure the fstab file is created
       when base-installer need it. Provide created-fstab as
       we now create the file ourselves.
+    - Remove the code to generate /target/etc/fstab, as this is
+      done by partconf-mkfstab now.
 
  -- Petter Reinholdtsen <pere@debian.org>  Sat, 13 Mar 2004 17:06:13 +0100
 
